--- a/client/package.yaml
+++ b/client/package.yaml
@@ -20,6 +20,13 @@ description:         Please see the README on GitHub at <https://github.com/mhei
 dependencies:
 - base >= 4.7 && < 5
 - messaging-shared
+- mtl
+- network
+- text
+- websockets
+
+ghc-options:
+- -Wall
 
 library:
   source-dirs: src
