--- a/shared/package.yaml
+++ b/shared/package.yaml
@@ -20,5 +20,8 @@ description:         Please see the README on GitHub at <https://github.com/mhei
 dependencies:
 - base >= 4.7 && < 5
 
+ghc-options:
+- -Wall
+
 library:
   source-dirs: src
