--- a/shared/package.yaml
+++ b/shared/package.yaml
@@ -19,6 +19,8 @@ description:         Please see the README on GitHub at <https://github.com/mhei
 
 dependencies:
 - base >= 4.7 && < 5
+- bytestring
+- text
 
 ghc-options:
 - -Wall
