add Aeson dependency

--- a/shared/package.yaml
+++ b/shared/package.yaml
@@ -18,6 +18,7 @@ category:            Web
 description:         Please see the README on GitHub at <https://github.com/mheinzel/messaging#readme>
 
 dependencies:
+- aeson
 - base >= 4.7 && < 5
 - bytestring
 - text
