enable more GHC warnings

--- a/server/package.yaml
+++ b/server/package.yaml
@@ -31,7 +31,7 @@ dependencies:
 - websockets
 
 ghc-options:
-- -Wall
+- -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -Wredundant-constraints
 
 library:
   source-dirs: src
