--- a/shared/package.yaml
+++ b/shared/package.yaml
@@ -25,7 +25,7 @@ dependencies:
 - uuid
 
 ghc-options:
-- -Wall
+- -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -Wredundant-constraints
 
 library:
   source-dirs: src
