set up foundation for GTK client

--- a/stack.yaml
+++ b/stack.yaml
@@ -30,6 +30,7 @@ resolver:
 #   - auto-update
 #   - wai
 packages:
+- client-gtk
 - client-terminal
 - server
 - shared
@@ -41,8 +42,9 @@ packages:
 # - acme-missiles-0.3
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
-#
-# extra-deps: []
+
+extra-deps:
+- gi-gtk-declarative-0.7.0
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
