Got it to accept and show some messages

--- a/client-gtk/package.yaml
+++ b/client-gtk/package.yaml
@@ -1,54 +1,58 @@
-name:                messaging-client-gtk
-version:             0.1.0.0
-github:              "mheinzel/messaging"
-license:             BSD3
-author:              "Luciano Platjouw, Matthias Heinzel, Nathan Oerlemans, Bart Remmers"
-maintainer:          "mheinzel@posteo.de"
-copyright:           "2021 Luciano Platjouw, Matthias Heinzel, Nathan Oerlemans, Bart Remmers"
+name: messaging-client-gtk
+version: 0.1.0.0
+github: "mheinzel/messaging"
+license: BSD3
+author: "Luciano Platjouw, Matthias Heinzel, Nathan Oerlemans, Bart Remmers"
+maintainer: "mheinzel@posteo.de"
+copyright: "2021 Luciano Platjouw, Matthias Heinzel, Nathan Oerlemans, Bart Remmers"
 
 extra-source-files:
-- README.md
+  - README.md
 
-synopsis:            Messaging GTK client
-category:            Web
+synopsis: Messaging GTK client
+category: Web
 
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/mheinzel/messaging#readme>
+description: Please see the README on GitHub at <https://github.com/mheinzel/messaging#readme>
 
 dependencies:
-- async
-- base >= 4.7 && < 5
-- gi-gdk
-- gi-glib
-- gi-gobject
-- gi-gtk
-- gi-gtk-declarative
-- haskell-gi
-- haskell-gi-base
-- haskell-gi-overloading
-- messaging-client-core
-- messaging-shared
-- mtl
-- network
-- text
-- websockets
+  - async
+  - base >= 4.7 && < 5
+  - gi-gdk
+  - gi-glib
+  - gi-gobject
+  - gi-gtk
+  - gi-gtk-declarative
+  - haskell-gi
+  - haskell-gi-base
+  - haskell-gi-overloading
+  - messaging-client-core
+  - messaging-shared
+  - mtl
+  - network
+  - text
+  - websockets
+  - microlens
+  - microlens-th
+  - vector
+
 
 ghc-options:
-- -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -Wredundant-constraints
+  - -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -Wredundant-constraints
 
 library:
   source-dirs: src
 
 executables:
   messaging-client-gtk-exe:
-    main:                Main.hs
-    source-dirs:         app
+    main: Main.hs
+    source-dirs: app
     ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
     dependencies:
-    - base
-    - messaging-client-gtk
+      - base
+      - messaging-client-gtk
