--- a/stack.yaml
+++ b/stack.yaml
@@ -47,6 +47,7 @@ packages:
 
 extra-deps:
 - gi-gtk-declarative-0.7.0
+- gi-gtk-declarative-app-simple-0.7.0
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
