move connection management to client-core

--- a/client-core/package.yaml
+++ b/client-core/package.yaml
@@ -19,12 +19,14 @@ description:         Please see the README on GitHub at <https://github.com/mhei
 
 dependencies:
 - base >= 4.7 && < 5
+- bytestring
 - containers
 - messaging-shared
 - microlens
 - microlens-th
 - network
 - text
+- uri-bytestring
 - vector
 - websockets
 
