--- a/ansi-terminal-declarative-simple/package.yaml
+++ b/ansi-terminal-declarative-simple/package.yaml
@@ -22,6 +22,8 @@ dependencies:
 - base >= 4.7 && < 5
 - containers
 - mtl
+- prettyprinter
+- prettyprinter-ansi-terminal
 - terminal-size
 - text
 - text-zipper
