client-terminal: use prettyprinter integration in view

--- a/client-terminal/package.yaml
+++ b/client-terminal/package.yaml
@@ -26,6 +26,8 @@ dependencies:
 - messaging-shared
 - microlens
 - microlens-th
+- prettyprinter
+- prettyprinter-ansi-terminal
 - text
 - vector
 - websockets
