move auth headers to messaging-shared

--- a/shared/package.yaml
+++ b/shared/package.yaml
@@ -23,6 +23,7 @@ dependencies:
 - bytestring
 - text
 - uuid
+- websockets
 
 ghc-options:
 - -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -Wredundant-constraints
