refactor client core state

--- a/client-core/package.yaml
+++ b/client-core/package.yaml
@@ -22,8 +22,7 @@ dependencies:
 - bytestring
 - containers
 - messaging-shared
-- microlens
-- microlens-th
+- lens
 - network
 - text
 - uri-bytestring
