--- a/server/package.yaml
+++ b/server/package.yaml
@@ -19,14 +19,16 @@ description:         Please see the README on GitHub at <https://github.com/mhei
 
 dependencies:
 - base >= 4.7 && < 5
+- bytestring
 - containers
 - messaging-shared
+- monad-logger
 - mtl
 - network
-- safe-exceptions
 - stm
 - text
 - transformers
+- unliftio
 - uuid
 - websockets
 
