client-core: support secure HTTPS connections

--- a/client-core/package.yaml
+++ b/client-core/package.yaml
@@ -28,6 +28,7 @@ dependencies:
 - uri-bytestring
 - vector
 - websockets
+- wuss
 
 ghc-options:
 - -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -Wredundant-constraints
