client-core: replace lens with microlens

--- a/client-core/package.yaml
+++ b/client-core/package.yaml
@@ -22,7 +22,9 @@ dependencies:
 - bytestring
 - containers
 - messaging-shared
-- lens
+- microlens
+- microlens-ghc
+- microlens-th
 - network
 - text
 - uri-bytestring
