--- a/client-gtk/package.yaml
+++ b/client-gtk/package.yaml
@@ -17,6 +17,10 @@ category: Web
 # common to point users to the README.md file.
 description: Please see the README on GitHub at <https://github.com/mheinzel/messaging#readme>
 
+when:
+- condition: impl(ghcjs)
+  buildable: false
+
 dependencies:
   - async
   - base >= 4.7 && < 5
