--- a/client-web/package.yaml
+++ b/client-web/package.yaml
@@ -1,15 +1,15 @@
-name:                messaging-server
+name:                messaging-client-web
 version:             0.1.0.0
-github:              "githubuser/messaging"
+github:              "mheinzel/messaging"
 license:             BSD3
-author:              "Luciano Platjouw, Matthias Heinzel, Nathan Oerlemans"
+author:              "Luciano Platjouw, Matthias Heinzel, Nathan Oerlemans, Bart Remmers"
 maintainer:          "mheinzel@posteo.de"
-copyright:           "2021 Luciano Platjouw, Matthias Heinzel, Nathan Oerlemans"
+copyright:           "2021 Luciano Platjouw, Matthias Heinzel, Nathan Oerlemans, Bart Remmers"
 
 extra-source-files:
 - README.md
 
-synopsis:            Messaging server
+synopsis:            Messaging web client using GHCJS
 category:            Web
 
 # To avoid duplicated efforts in documentation and dealing with the
@@ -18,23 +18,19 @@ category:            Web
 description:         Please see the README on GitHub at <https://github.com/mheinzel/messaging#readme>
 
 when:
-- condition: impl(ghcjs)
+- condition: "!impl(ghcjs)"
   buildable: false
 
 dependencies:
+- aeson
 - base >= 4.7 && < 5
-- bytestring
 - containers
+- ghcjs-base
+- messaging-client-core
 - messaging-shared
-- monad-logger
-- mtl
-- network
-- stm
+- miso
 - text
-- transformers
-- unliftio
-- uuid
-- websockets
+- vector
 
 ghc-options:
 - -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -Wredundant-constraints
@@ -43,25 +39,15 @@ library:
   source-dirs: src
 
 executables:
-  messaging-server-exe:
+  messaging-client-web-exe:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    ghcjs-options:
+    - -dedupe
     dependencies:
     - base
-    - messaging-server
-
-tests:
-  messaging-server-tests:
-    main:        Test.hs
-    source-dirs: test
-    dependencies:
-    - base
-    - hspec
-    - HUnit
-    - messaging-server
-    - messaging-shared
-    - say
+    - messaging-client-web
