Add parsing for port to the server

--- a/server/package.yaml
+++ b/server/package.yaml
@@ -35,6 +35,7 @@ dependencies:
 - unliftio
 - uuid
 - websockets
+- optparse-applicative
 
 ghc-options:
 - -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -Wredundant-constraints
